# reiai

./: .gitignore  LICENSE  pyproject.toml
reiai/: cli.py  gmap.py  gpt_base.py  text_process.py  util.py
tests/: test_text_process.py
tests/data/: text_with_addresses.txt
